Change API Paths to Path to avoid deprecate