@@ -1,6 +1,6 @@
 package com.limvik.dao;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -14,7 +14,7 @@ public class DatabaseConnection {
     private DatabaseConnection() throws SQLException {
         SQLiteConfig config = new SQLiteConfig();
         config.enforceForeignKeys(true);
-        String dbPath = Paths.get("src", "main", "resources", "db", "flashcards.db").toString();
+        String dbPath = Path.of("src", "main", "resources", "db", "flashcards.db").toString();
         connection = DriverManager.getConnection("jdbc:sqlite:" + dbPath, config.toProperties());
     }
 
